fixed bug with delete-btn and text overflow on forecast cards

--- a/assets/style.css
+++ b/assets/style.css
@@ -142,7 +142,7 @@ footer {
 }
 
 .delete-btn {
-    background-color: navy;
+    background-color: red;
     border-radius: 10%;
     margin-right: 5px;
     border: 1px black solid;
